^ Improved unify look of items/categories/types/fields backend managers, also adding configurable columns to the last 3. TODO the other backend managers

--- a/admin/assets/css/flexicontentbackend.css
+++ b/admin/assets/css/flexicontentbackend.css
@@ -173,3 +173,6 @@ div.current dd .pane-sliders .panel {
 	font-style: italic !important;
 }
 
+.flexicontent .icon-publish, .icon-cancel {
+	font-size: 14px;
+}
