--- a/admin/assets/css/j3x.css
+++ b/admin/assets/css/j3x.css
@@ -58,18 +58,7 @@
 .icon-32-advindexdirty	{ background-image: url(../../../../templates/hathor/images/toolbar/icon-32-batch.png); }
 .icon-32-advindexpurge	{ background-image: url(../../../../templates/hathor/images/toolbar/icon-32-purge.png); }
 
-.icon-test:before { content: "l";  color: #51a351; font-weight:bold; }
-.icon-savenew:before    { content: "\5d";   color: #51a351; }
-.icon-32-delete:before,
-.icon-32-trash:before   { content: "\4c"; }
-.icon-copy_wvalues:before,
-.icon-params:before     { content: "\e018"; color: #51a351; }
-.icon-32-archive:before { content: "\50"; }
-.icon-import:before     { content: "\e022"; color: darkorange; }
-.icon-32-restore:before { content: "\6c"; }
 
-.icon-translate:before {
-	content: "\25";}
 /**************
  * Small labels
  **************/
@@ -545,3 +534,20 @@ dl#content-pane.tabs {
 	display: inline-block;
 	margin: 2px 0 0 4px;
 }
+
+[class^="fcsbnav-"] {
+	width:90%;
+	font-size:16px;
+	margin:12px 0 2px -10px;
+	padding: 4px 0 0 20px;
+	border-top: 0px dashed;
+	border-bottom: 1px dashed;
+	border-color:gray;
+	color: #555;
+	background-repeat: no-repeat;
+}
+.fcsbnav-content-editing {color: #777; margin-top:-4px; }
+.fcsbnav-type-fields {color: #777; }
+.fcsbnav-content-viewing {color: #777; }
+.fcsbnav-users {color: #777; }
+.fcsbnav-expert {color:#777; }
