--- a/admin/assets/css/j3x.css
+++ b/admin/assets/css/j3x.css
@@ -260,12 +260,17 @@ table.adminlist .pagination {
  ***********************/
 
 .pane-sliders .panel {
-	border: 1px solid #CCCCCC;
 	margin-bottom: 3px;
 }
 .pane-sliders .panel h3 {
-	background: none repeat scroll 0 0 #FAFAFA;
-	color: #666666;
+	-webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;
+	font-size:12px;
+	font-weight:bold;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
+	background-color: #9C9D9E;
+}
+.pane-sliders .panel h3  a{
+	color:#fff !important;
 }
 .pane-sliders .title {
 	color: #666666;
@@ -274,7 +279,10 @@ table.adminlist .pagination {
 	padding: 2px 2px 2px 5px;
 }
 .pane-sliders .content {
-	background-color: white !important;
+	box-shadow: 0 0 4px #cccccc;
+	border-radius:2px;
+	padding: 12px 0px 0px 12px;
+	background: none repeat scroll 0 0 #f5f5f5;
 }
 .pane-toggler-down a:hover, .pane-toggler-down a:focus,
 .pane-toggler a:hover, .pane-toggler a:focus {
@@ -289,7 +297,7 @@ table.adminlist .pagination {
 	border-bottom: 1px solid #CCCCCC;
 }
 .pane-toggler-down span {
-	background: url("../images/toggle_blue.png") no-repeat scroll 0px 0px transparent;
+	background: url("../images/toggle_blue_up.png") no-repeat scroll 0px 0px transparent;
 	padding-left: 20px;
 	font-size: 14px;
 }
