--- a/admin/assets/css/flexicontentbackend.css
+++ b/admin/assets/css/flexicontentbackend.css
@@ -246,18 +246,133 @@ div#fc-dash-boardbtns {
 	margin-bottom: 12px;
 }
 div#fc-dash-credits {
-	margin: 0px 24px 12px 0px;
+	margin: 24px 0px 12px 0px;
 }
+div#fc-dash-credits .fc-board-set-inner { text-align:left; }
+div#fc-dash-credits #fc-dash-logo { display:inline-block; padding:2px; border:1px solid #e0e0e0; border-radius:3px; float: left; margin:4px 16px 16px 0 !important;}
+div#fc-dash-credits #fc-dash-license { margin:4px 16px 0 0 !important; padding: 22px 32px !important; max-width: inherit; }
+div#fc-dash-credits #fc-dash-devs { display:inline-flex; }
+div#fc-dash-credits #fc-dash-devs > .fc-mssg-inline  { vertical-align:top; margin:0 24px 12px 0 !important; padding:0 !important; }
+div#fc-dash-credits #fc-dash-devs .label { margin: 2px 0; }
+
 div#fc-dash-sliders {
 	padding: 0px 0px; 
 	width: 100%;
 	clear:both;
 	margin-bottom: 12px;
+	background: white;
 }
-div#fc-dash-sliders table.adminlist tr > td {
-	border: 1px solid gray !important;
-	padding: 4px 12px !important;
+div#fc-dash-sliders .panel .title {
+	padding: 8px;
 }
+div#fc-dash-sliders table.fc-table-list {
+	font: 100%/30px 'Helvetica Neue', helvetica, arial, sans-serif;
+	text-shadow: 0 1px 0 #fff;
+	background: #f5f5f5;
+	border-collapse: separate;
+	box-shadow: inset 0 1px 0 #fff;
+	font-size: 12px;
+	line-height: 24px;
+	margin: 30px auto;
+	text-align: left;
+	min-width: 50%;
+}	
+
+div#fc-dash-sliders table.fc-table-list th {
+	background: url(../images/noise1.png), linear-gradient(#777, #444);
+	border-left: 1px solid #555;
+	border-right: 1px solid #777;
+	border-top: 1px solid #555;
+	border-bottom: 1px solid #333;
+	box-shadow: inset 0 1px 0 #999;
+	color: #fff;
+  font-weight: bold;
+	padding: 6px 12px;
+	position: relative;
+	text-shadow: 0 1px 0 #000;	
+}
+
+div#fc-dash-sliders table.fc-table-list th:after {
+	background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,.08));
+	content: '';
+	display: block;
+	height: 25%;
+	left: 0;
+	margin: 1px 0 0 0;
+	position: absolute;
+	top: 25%;
+	width: 100%;
+}
+
+div#fc-dash-sliders table.fc-table-list th:first-child {
+	border-left: 1px solid #777;	
+	box-shadow: inset 1px 1px 0 #999;
+}
+
+div#fc-dash-sliders table.fc-table-list th:last-child {
+	box-shadow: inset -1px 1px 0 #999;
+}
+
+div#fc-dash-sliders table.fc-table-list td {
+	border-right: 1px solid #fff;
+	border-left: 1px solid #e8e8e8;
+	border-top: 1px solid #fff;
+	border-bottom: 1px solid #e8e8e8;
+	padding: 10px 15px;
+	position: relative;
+	transition: all 300ms;
+}
+div#fc-dash-sliders table.fc-table-list td a {
+	text-decoration: none;
+	color:rgb(0, 136, 204);
+	font-weight:bold;
+}
+
+div#fc-dash-sliders table.fc-table-list td:first-child {
+	box-shadow: inset 1px 0 0 #fff;
+}	
+
+div#fc-dash-sliders table.fc-table-list td:last-child {
+	border-right: 1px solid #e8e8e8;
+	box-shadow: inset -1px 0 0 #fff;
+}	
+
+div#fc-dash-sliders table.fc-table-list tr {
+	background: url(../images/noise1.png);	
+}
+
+div#fc-dash-sliders table.fc-table-list tr:nth-child(odd) td {
+	background: #f1f1f1 url(../images/noise1.png);	
+}
+
+div#fc-dash-sliders table.fc-table-list tr:last-of-type td {
+	box-shadow: inset 0 -1px 0 #fff; 
+}
+
+div#fc-dash-sliders table.fc-table-list tr:last-of-type td:first-child {
+	box-shadow: inset 1px -1px 0 #fff;
+}	
+
+div#fc-dash-sliders table.fc-table-list tr:last-of-type td:last-child {
+	box-shadow: inset -1px -1px 0 #fff;
+}	
+
+div#fc-dash-sliders table.fc-table-list thead tr:hover th {
+	color: white;
+	text-shadow: 2px 2px 3px #777 !important;
+}
+
+div#fc-dash-sliders table.fc-table-list tbody tr:hover td {
+	color: black;
+	text-shadow: 2px 2px 2px #888;
+}
+
+div#fc-dash-sliders table.fc-table-list tbody tr:hover td a {
+	color: rgb(0, 136, 204);
+	text-shadow: 1px 1px 2px #888;
+}
+
+
 
 /* Dashboard button SET (a fieldset) */
 fieldset.fc-board-set {
