--- a/admin/assets/css/j3x.css
+++ b/admin/assets/css/j3x.css
@@ -172,6 +172,87 @@ fieldset legend {
 /**************
  * Table styles
  **************/
+ 
+
+table.adminlist thead th.left {
+	text-align: left;
+	border-bottom: none;
+}
+table.adminlist thead th.center {
+	text-align: center;
+	border-bottom: none;
+}
+table.adminlist thead td {
+	background: #fff;
+	vertical-align: middle;
+	vertical-align: bottom;
+  border-bottom: 1px solid #DADADA;
+  border-left: 1px solid #DADADA;
+  border-top: 1px solid #DADADA;
+  padding: 10px 8px 5px 8px;
+}
+table.adminlist thead td.left #search,
+table.adminlist thead td.left #filter_id {
+	width: 92%;
+}
+table.adminlist thead td.left .radio {
+	display: block;
+	margin-bottom: 5px;
+}
+table.adminlist thead th .filterdel img {
+	vertical-align: bottom;
+
+}
+table.adminlist thead td.filterbuttons {
+	background-color: #f8f8f8;
+	border-bottom: 1px solid #999;
+}
+table.adminlist thead td.filterbuttons input[type="text"] {
+	background-color: #fff;
+	border-radius: 2px;
+	font-weight: bold;
+	margin-left: 4px;
+}
+table.adminlist thead td.filterbuttons input {
+	background-color: transparent;
+}
+table.adminlist thead td.filterbuttons input:hover {
+	background-color: #d8d8d8;
+}
+
+table.adminlist td.yellow,
+table.adminlist tbody tr td.yellow,
+table.adminlist tbody tr.row1 td.yellow {
+	background-color: #FFFFDD;
+}
+
+table.adminlist thead #filter_lang,
+table.adminlist thead #filter_state,
+table.adminlist thead #filter_type { width: 50px !important; }
+table.adminlist thead #filter_authors { width: 120px !important; }
+table.adminlist thead #filter_cats { width: 120px !important; }
+table.adminlist thead #startdate,
+table.adminlist thead #enddate { width: 100px !important; }
+
+table.adminlist td.order {
+	width: auto !important;
+}
+
+table.adminlist td.order span {
+	width: 16px !important;
+}
+
+table.adminlist th {
+	padding: 10px 8px 5px !important;
+}
+table.adminlist td {
+	padding: 7px 8px !important;
+}
+
+.novalue {
+	color: gray;
+	font-style: italic;
+}
 
 table.adminlist input[type="text"] {
 	width: auto !important;
@@ -179,27 +260,27 @@ table.adminlist input[type="text"] {
 	padding-right: 0px !important;
 }
 table.adminlist {
-	background-color: #F3F3F3 !important;
-	border-spacing: 1px !important;
-	border-collapse: separate !important;
-	color: #666666 !important;
+	background-color: #fff !important;
+	border-spacing: 0px !important;
+
+	color: #555 !important;
 	width: 100%;
+	margin-bottom: 20px;
+	box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.04);
 }
 table.adminlist td, table.adminlist th {
-	padding: 4px;
+	padding: 7px 8px;
 }
-table.adminlist td {
-	padding-left: 8px;
-}
+
 table.adminlist thead th {
-	background: none repeat scroll 0 0 #F7F7F7 !important;
-	border-bottom: 1px solid #CCCCCC !important;
-	border-left: 1px solid #FFFFFF !important;
-	color: #666666 !important;
+	background: none repeat scroll 0 0 #fff !important;
+	border-bottom: 1px solid #dadada !important;
+	border-left: none !important;
+	color: #555 !important;
 	text-align: center !important;
 }
 table.adminlist thead th.left {
-	text-align: left;
+	text-align: left !important;
 }
 table.adminlist thead a:hover {
 	text-decoration: none;
@@ -214,25 +295,28 @@ table.adminlist tbody th {
 table.adminlist tbody tr {
 	background-color: #FFFFFF;
 	text-align: left;
+	
 }
 table.adminlist tbody tr.row0:hover td, table.adminlist tbody tr.row1:hover td {
-	background-color: #E8F6FE;
+	background-color: #f3f3f3;
 }
 table.adminlist tbody tr td {
 	background: none repeat scroll 0 0 #FFFFFF;
-	border: 1px solid #FFFFFF;
+	border: none;
+	border-top: 1px solid #dadada;
+	
 }
 table.adminlist tbody tr.row1 td {
-	background: none repeat scroll 0 0 #F0F0F0;
-	border-top: 1px solid #FFFFFF;
+	background: none repeat scroll 0 0 #f8f8f8;
+	border-top: 1px solid #dadada;
 }
 table.adminlist tfoot tr {
 	color: #333333;
 	text-align: center;
 }
 table.adminlist tfoot td, table.adminlist tfoot th {
-	background-color: #F7F7F7;
-	border-top: 1px solid #999999;
+	background-color: #fff;
+	border-top: 1px solid #dadada;
 	text-align: center;
 }
 table.adminlist td.order {
@@ -252,7 +336,6 @@ table.adminlist .pagination {
 	margin: 0 auto;
 	padding: 0;
 }
-
 
 
 /***********************
